# TailsEngine

./: .gitignore  CMakeLists.txt  LICENSE  Notes.txt  README.md  TailsEngine.sln  TailsEngine.vcxproj  build.zig  build.zig.zon
example/: Bullet.hpp  CMakeLists.txt  MyWidget.hpp  Player.cpp  Player.hpp  main.cpp
include/Tails/: AnimatedSpriteComponent.hpp  Animation.hpp  Application.hpp  Assert.hpp  Asset.hpp  AssetCache.hpp  AssetData.hpp  AudioManager.hpp  Bus.hpp  CMakeLists.txt  CameraComponent.hpp  ChaiScript.hpp  CircleShapeComponent.hpp  ClassRegistry.hpp  Client.hpp  Colour.hpp  Component.hpp  Concepts.hpp  Config.hpp  ConvexShapeComponent.hpp  Core.hpp  Debug.hpp  Directories.hpp  Engine.hpp  EngineRegistry.hpp  EngineSettings.hpp  EngineStatics.hpp  Entity.hpp  EntryPoint.hpp  Exception.hpp  Filesystem.hpp  FontAsset.hpp  Format.hpp  Handle.hpp  InputDevice.hpp  InputManager.hpp  Instance.hpp  Key.hpp  KeyboardDevice.hpp  Level.hpp  (+40 more)
include/Tails/Assets/: Asset.hpp  AssetDeleter.hpp  AssetHandle.hpp  AssetInfo.hpp  AssetManager.hpp  AssetPath.hpp  AssetPtr.hpp  AssetRegistry.hpp  AssetSubsystem.hpp  AssetType.hpp  CMakeLists.txt  Font.hpp  FontResource.hpp  Handle.hpp  Info.hpp  Level.hpp  Resource.hpp  Sound.hpp  SoundBuffer.hpp  SoundResource.hpp  Texture.hpp  TextureResource.hpp
include/Tails/Audio/: AudioSubsystem.hpp  Bus.hpp  BusHandle.hpp  CMakeLists.txt  MusicBus.hpp  SoundBus.hpp
include/Tails/Components/: AnimatedSpriteComponent.hpp  CMakeLists.txt  CameraComponent.hpp  CircleShapeComponent.hpp  Component.hpp  ConvexShapeComponent.hpp  ParticleComponent.hpp  ShapeComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TileMapComponent.hpp  TransformComponent.hpp
include/Tails/Containers/: Array.hpp  CMakeLists.txt  Map.hpp
include/Tails/Delegates/: CMakeLists.txt  Delegate.hpp  DelegateBase.hpp  MulticastDelegate.hpp
include/Tails/Entities/: CMakeLists.txt  Entity.hpp  RectEntity.hpp  SpriteEntity.hpp
include/Tails/Events/: CMakeLists.txt  Delegate.hpp  Event.hpp  MultiEvent.hpp
include/Tails/Game/: Actor.hpp  CMakeLists.txt  Level.hpp
include/Tails/Input/: Action.hpp  ActionHandle.hpp  CMakeLists.txt  Context.hpp  Event.hpp  EventPoller.hpp  InputManager.hpp  InputSubsystem.hpp  Key.hpp  Keys.hpp  Modifier.hpp  Mouse.hpp  Value.hpp
include/Tails/JSON/: CMakeLists.txt  JSONReader.hpp
include/Tails/Layers/: CMakeLists.txt  Layer.hpp  LayerCamera.hpp  LevelLayer.hpp  ScreenLayer.hpp  WorldLayer.hpp
include/Tails/Level/: CMakeLists.txt  LDtkLoadParams.hpp  LoadParams.hpp
include/Tails/Managers/: Asset.hpp  Audio.hpp  Input.hpp  Manager.hpp
include/Tails/Maths/: Angle.hpp  CMakeLists.txt  Circle.hpp  Colour.hpp  Euler.hpp  FloatColour.hpp  Maths.hpp  Matrix2D.hpp  Matrix3.hpp  OrientedRect.hpp  Quaternion.hpp  Rect.hpp  SAT.hpp  Transform2D.hpp  Transform3D.hpp  Vector2.hpp  Vector3.hpp
include/Tails/Memory/: CMakeLists.txt  OptionalRef.hpp  SharedPtr.hpp  UniquePtr.hpp
include/Tails/Network/: CMakeLists.txt  Server.hpp
include/Tails/Registries/: CMakeLists.txt  EntityRegistry.hpp  Registry.hpp
include/Tails/Renderer/: CMakeLists.txt  RenderItem.hpp  Renderer.hpp  Shapes.hpp  Vertex.hpp
include/Tails/Resources/: CMakeLists.txt  Font.hpp  Resource.hpp  SoundBuffer.hpp  Texture.hpp
include/Tails/SilverUI/: CMakeLists.txt  Panel.hpp  Slot.hpp  Widget.hpp  WidgetSubsystem.hpp
include/Tails/States/: CMakeLists.txt  LevelState.hpp  State.hpp
include/Tails/Subsystems/: AssetSubsystem.hpp  AudioSubsystem.hpp  CMakeLists.txt  EngineSubsystem.hpp  InputSubsystem.hpp  LayerSubsystem.hpp  Manager.hpp  RegistrySubsystem.hpp  StateSubsystem.hpp  Subsystem.hpp  SubsystemManager.hpp
include/Tails/Templated/: Array.hpp  Bitset.hpp  CMakeLists.txt  Expected.hpp  Optional.hpp  SharedRef.hpp  Slice.hpp  StaticArray.hpp  UniquePtr.hpp  Variant.hpp
include/Tails/Types/: CMakeLists.txt  Colour.hpp  Int.hpp  Transform2D.hpp  Transform3D.hpp  Vector2.hpp  Vector3.hpp
include/Tails/UI/: Alignment.hpp  Button.hpp  ButtonSlot.hpp  CMakeLists.txt  (+31 more)
src/: CMakeLists.txt  Debug.cpp  Engine.cpp  EngineStatics.cpp  Entity.cpp  RectEntity.cpp  SpriteEntity.cpp  State.cpp  StateStack.cpp  main.cpp
src/Assets/: AssetInfo.cpp  Info.cpp
src/Audio/: Bus.cpp  SoundBus.cpp
src/Core/: AnimatedSprite.cpp  AnimationPlayer.cpp  ApplicationWindow.cpp  Component.cpp  Entity.cpp  GameInstance.cpp  InputTypes.cpp  Level.cpp  Obj.cpp  Screen.cpp  TestScreen.cpp  Viewport.cpp  World.cpp
src/Debug/: Debug.cpp
src/Entities/: Entity.cpp  RectEntity.cpp  SpriteEntity.cpp
src/Input/: Action.cpp  Context.cpp  Keys.cpp
src/Layers/: Layer.cpp  LevelLayer.cpp  ScreenLayer.cpp
src/Level/: CollisionTest.cpp  Entity.cpp  TailsEntity.cpp
src/Managers/: Asset.cpp  Audio.cpp  CollisionManager.cpp  Input.cpp  InputManager.cpp  MusicManager.cpp  ResourceManager.cpp
src/Registries/: EntityRegistry.cpp
src/States/: LevelState.cpp  State.cpp
src/Subsystems/: AssetSubsystem.cpp  AudioSubsystem.cpp  EngineSubsystem.cpp  InputSubsystem.cpp  Manager.cpp  RegistrySubsystem.cpp  StateSubsystem.cpp  Subsystem.cpp  SubsystemManager.cpp
src/Tails/: AnimatedSpriteComponent.cpp  Animation.cpp  Application.cpp  ApplicationImpl.hpp  Assert.cpp  Asset.cpp  AssetCache.cpp  AudioManager.cpp  CMakeLists.txt  CameraComponent.cpp  ChaiScript.cpp  CircleShapeComponent.cpp  ClassRegistry.cpp  Client.cpp  Component.cpp  ConvexShapeComponent.cpp  Debug.cpp  Directories.cpp  Engine.cpp  EngineRegistry.cpp  EngineSettings.cpp  EngineStatics.cpp  Entity.cpp  EntryPoint.cpp  Exception.cpp  Filesystem.cpp  FontAsset.cpp  InputManager.cpp  Instance.cpp  Key.cpp  KeyboardDevice.cpp  Level.cpp  LevelSettings.cpp  LevelSubsystem.cpp  LocaleString.cpp  Localisation.cpp  Log.cpp  Memory.cpp  Object.cpp  Padding.cpp  (+23 more)
src/Temp/: CollisionTest.cpp  TailsEntity.cpp
src/UI/: Button.cpp  ButtonSlot.cpp  CanvasPanel.cpp  CanvasSlot.cpp  PanelSlot.cpp  PanelWidget.cpp  Slot.cpp  StackBox.cpp  StackBoxSlot.cpp  Widget.cpp  WidgetNavigation.cpp
src/Widgets/: RectWidget.cpp  TextWidget.cpp  Widget.cpp
(+287 files in other folders)
