project(Pokemon)

add_library(
    TailsEngine
    Assets/AssetInfo.cpp
    Entities/Entity.cpp
    Entities/RectEntity.cpp
    Entities/SpriteEntity.cpp
    Input/Action.cpp
    Input/Context.cpp
    States/State.cpp
    Subsystems/AssetSubsystem.cpp
    Subsystems/AudioSubsystem.cpp
    Subsystems/RegistrySubsystem.cpp
    Subsystems/InputSubsystem.cpp
    Subsystems/StateSubsystem.cpp
    UI/Slot.cpp
    UI/Widget.cpp
    UI/PanelWidget.cpp
    UI/PanelSlot.cpp
    UI/StackBox.cpp
    UI/StackBoxSlot.cpp
    Debug.cpp
    Engine.cpp
)
