project(Pokemon)

add_library(
    TailsEngine
    SHARED
    Assets/AssetInfo.cpp
    Entities/Entity.cpp
    Entities/RectEntity.cpp
    Entities/SpriteEntity.cpp
    Input/Action.cpp
    Input/Context.cpp
    Layers/LayerCamera.cpp
    Layers/Layer.cpp
    Layers/LevelLayer.cpp
    Layers/ScreenLayer.cpp
    Registries/EntityRegistry.cpp
    States/State.cpp
    Subsystems/Subsystem.cpp
    Subsystems/AssetSubsystem.cpp
    Subsystems/AudioSubsystem.cpp
    Subsystems/RegistrySubsystem.cpp
    Subsystems/InputSubsystem.cpp
    Subsystems/StateSubsystem.cpp
    UI/Slot.cpp
    UI/Widget.cpp
    UI/PanelWidget.cpp
    UI/PanelSlot.cpp
    UI/StackBox.cpp
    UI/StackBoxSlot.cpp
    UI/RectangleWidget.cpp
    UI/Button.cpp
    UI/ButtonSlot.cpp
    Debug.cpp
    EngineStatics.cpp
    Engine.cpp
)
