project(TailsEngine)

add_library(
    TailsEngine
    SHARED
    Assets/AssetInfo.cpp
    Audio/Bus.cpp
    Audio/SoundBus.cpp
    Audio/MusicBus.cpp
    Entities/Entity.cpp
    Entities/RectEntity.cpp
    Entities/SpriteEntity.cpp
    Input/Action.cpp
    Input/Context.cpp
    Input/Keys.cpp
    Layers/LayerCamera.cpp
    Layers/Layer.cpp
    Layers/LevelLayer.cpp
    Layers/ScreenLayer.cpp
    Registries/EntityRegistry.cpp
    States/State.cpp
    Subsystems/Subsystem.cpp
    Subsystems/AssetSubsystem.cpp
    Subsystems/AudioSubsystem.cpp
    Subsystems/RegistrySubsystem.cpp
    Subsystems/InputSubsystem.cpp
    Subsystems/StateSubsystem.cpp
    UI/CanvasPanel.cpp
    UI/CanvasSlot.cpp
    UI/Slot.cpp
    UI/Widget.cpp
    UI/PanelWidget.cpp
    UI/PanelSlot.cpp
    UI/StackBox.cpp
    UI/StackBoxSlot.cpp
    UI/RectangleWidget.cpp
    UI/Button.cpp
    UI/ButtonSlot.cpp
    UI/WidgetNavigation.cpp
    Debug.cpp
    EngineStatics.cpp
    Engine.cpp
)
